--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body{
 
 #dateInput{
     width: 200px !important;
+    color: white;
 
 }
 input[type="date"]::-webkit-calendar-picker-indicator {
@@ -51,6 +52,14 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .toDoInput input:focus{
     outline: none;
+}
+
+#priority{
+    background-color: #262626;
+    color: white;
+    width: 100px;
+    border: none;
+    padding: 4px 10px;
 }
 
 
@@ -77,7 +86,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
      align-items: center;
      width: 100vw;
      margin-inline: auto;
-     color: white;
+     color: rgb(189, 183, 183);
      gap: 30px;
 }
 
@@ -98,7 +107,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .info div>span,h4>span{
-  color: white;
+  color: rgb(143, 140, 140);
   height: 40px;
   width: 30px;
   border: none;
@@ -156,7 +165,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     align-items: center;
     gap: 20px;
     background-color: #262626;
-    padding: 15px 30px;
+    padding: 15px 5px;
 
 }
  .item input {
@@ -174,11 +183,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     margin-top: 5px;
 }
 
-.content{
-    flex-grow: 1;
-}
-
-
 
 /* utility class */
 .displayNone{
@@ -190,4 +194,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     display: inline-block;
 }
 
+.middleStroke{
+   text-decoration: line-through;
+}
 
+.editNow{
+    /* color: #7a7979; */
+    cursor: pointer;
+    /* color: white; */
+    border: 2px solid white;
+    padding: 4px 8px;
+    border-radius: 4px;
+}
