--- a/style.css
+++ b/style.css
@@ -206,3 +206,17 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding: 4px 8px;
     border-radius: 4px;
 }
+
+.item select{
+    background-color: #646262;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+}
+
+.item select:focus{
+    outline: none;
+}
+
+
+
