--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     background-color: #262626;
     border: none;
     color: #808080;
+    cursor: pointer;
 }
 .item>label>span{
     margin-top: 5px;
@@ -233,3 +234,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     gap: 20px;
 }
 
+
+form button{
+    cursor: pointer;
+}
